scripts/manifests/cluster-psql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine
  namespace: default
spec:
  containers:
  - image: alpine:3.17
    command:
      - /bin/sh
      - "-c"
      - |
        apk add --no-cache postgresql-client
        export PGPASSWORD=${POSTGRES_PASSWORD}
        psql -h ${PGHOST} -U ${PGUSER} -d ${PGDB} -c "CREATE SCHEMA posit_workbench";
        psql -h ${PGHOST} -U ${PGUSER} -d ${PGDB} -c "CREATE SCHEMA posit_connect";
        psql -h ${PGHOST} -U ${PGUSER} -d ${PGDB} -c "CREATE SCHEMA posit_packman";
        psql -h ${PGHOST} -U ${PGUSER} -d ${PGDB} -c "CREATE SCHEMA posit_packman_metrics";
    imagePullPolicy: IfNotPresent
    name: alpine
  restartPolicy: Always
