scripts/manifests/traefik.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - image: docker.io/traefik:v3.0
          name: traefik
          ports:
            - name: "web"
              containerPort: 80
          args:
            - "--entrypoints.web.address=:80/tcp"
            - "--api.dashboard=false"
            - "--providers.kubernetescrd"
            - "--log.level=DEBUG"
            - "--experimental.plugins.rewrite-headers.modulename=github.com/XciD/traefik-plugin-rewrite-headers"
            - "--experimental.plugins.rewrite-headers.version=v0.0.3"

---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  ports:
    - name: web
      nodePort: 30080
      port: 80
      protocol: TCP
      targetPort: web
  selector:
    app: traefik
  type: NodePort
