scripts/manifests/aws-lb-controller-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  namespace: traefik
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/load-balancer-name: ${LB_NAME}
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/success-codes: 200-404
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/security-groups: ${LB_SG}
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - backend:
              service:
                name: traefik
                port:
                  name: web
            path: /*
            pathType: ImplementationSpecific
